=== gdl 0.7.1 ===

2007-01-18  Johannes Schmid <jhs@gnome.org>

	* po/LINGUAS
	* configure.in
	* autogen.sh:
	Applied http://live.gnome.org/GnomeGoals/PoLinguas
	Bumped version to 0.7.1
	
	* NEWS:
	Updated for release

2007-01-17  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	Reviewed by Johannes Schmid <jhs@gnome.org>:
	* gdl/README.gdl-dock
	* gdl/gdl-combo-button.c
	* gdl/gdl-data-view.c
	* gdl/gdl-dock-bar.c
	* gdl/gdl-dock-item-grip.c
	* gdl/gdl-dock-item.c
	* gdl/gdl-dock-layout.c
	* gdl/gdl-dock-master.c
	* gdl/gdl-dock-notebook.c
	* gdl/gdl-dock-object.c
	* gdl/gdl-dock-paned.c
	* gdl/gdl-dock-placeholder.c
	* gdl/gdl-dock-tablabel.c
	* gdl/gdl-dock.c
	
	Bug 381845 – Grip doesn't change the title when long_name is changed

2007-01-17  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-dock-bar.c
	* gdl/test-dock.c:

	Added gdl_dock_bar_set/get_style (fix #397562)

2007-01-16  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

=== GDL 0.7.0 ===

2007-01-14  Naba Kumar  <naba@gnome.org>

	* NEWS: updated for 0.7.0 release.
	
2006-09-18  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	* gdl-gnome-1.0.pc.in (added):
	* gdl/Makefile.am:
	
	Split the library into libgdl (gtk only) and libgdl-gnome (with gnome support)
	Bumped version to 0.7.0 (because of obvious API changes)
	
2006-07-31  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-tools.c (removed):
	* gdl/gdl-tools.h:
	
	Removed bonobo-depency in gdl-tools.h and remove gdl-tools.c

2006-07-28  Johannes Schmid <jhs@gnome.org>

	* configure.in: Fixed --disable-gnome
	* autogen.sh: Always use automake-1.9

2006-07-19  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-master.c
	- Fixed a type which prevent the preview window from beeing shown
	- Fixed restoring of splitter positions

2006-07-08  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/gdl-dock-item.c: