@@ -1,3 +1,8 @@
+2007-02-01  Johannes Schmid <jhs@gnome.org>
+
+	* Makefile.am:
+	Install gdl-gnome.pc only if build with gnome support (#403044)
+
 === gdl 0.7.1 ===
 
 2007-01-18  Johannes Schmid <jhs@gnome.org>
